--- a/fabtests/pytest/pytest.ini
+++ b/fabtests/pytest/pytest.ini
@@ -9,6 +9,7 @@ markers =
     ubertest_quick: ubertest tests run with quick config
     ubertest_verify: ubertest tests run with verify config
     cuda_memory: testing with cuda device memory direct
+    serial : test must be run in serial mode
 junit_suite_name = fabtests
 junit_logging = all
 junit_log_passing_tests = true
