--- a/prov/opx/Makefile.include
+++ b/prov/opx/Makefile.include
@@ -62,7 +62,8 @@ opx_files =									\
 		prov/opx/src/fi_opx_shm.c					\
 		prov/opx/src/fi_opx_hfi_select.c				\
 		prov/opx/src/opa_utils_gen1.c					\
-		prov/opx/src/opa_proto.c		
+		prov/opx/src/opa_proto.c					\
+		prov/opx/src/fi_opx_progress.c
 
 opx_CPPFLAGS =									\
 		-I$(builddir)/prov/opx/include					\
@@ -129,6 +130,7 @@ noinst_HEADERS = \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_flight_recorder.h \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_tagged.h \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_hfi1_progress.h \
+	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_progress.h \
 	$(top_srcdir)/prov/opx/include/rdma/fi_direct_trigger.h \
 	$(top_srcdir)/prov/opx/include/rdma/fi_direct_atomic.h \
 	$(top_srcdir)/prov/opx/include/rdma/fi_direct.h \
