fabtests/pytest/efa: EFA protocol selection test
Adds a test to make sure env protocol switches are being respected.

Signed-off-by: Seth Zegelstein <szegel@amazon.com>

--- a/fabtests/Makefile.am
+++ b/fabtests/Makefile.am
@@ -169,6 +169,7 @@ nobase_dist_config_DATA = \
 	pytest/efa/test_multi_recv.py \
 	pytest/efa/test_rnr.py \
 	pytest/efa/test_efa_info.py \
+	pytest/efa/test_efa_protocol_selection.py \
 	pytest/efa/test_runt.py \
 	pytest/efa/test_fork_support.py \
 	pytest/efa/test_mr.py \
