--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,8 @@ fabtests.spec
 fabtests/config
 fabtests/ubertest/fabtest
 fabtests/ubertest/fi_ubertest
-
+fabtests/common/check_hmem
+fabtests/regression/sighandler_test
 fabtests/benchmarks/fi_*
 fabtests/component/sock_test
 fabtests/functional/fi_*
