contrib/intel/jenkins: rename net stages to match tcp
net-fabtests confuses the summarizer into not being able to find a file
called net-fabtests_fabtests_reg when it expected net_fabtests_reg.
Renaming the stage to match the others 'tcp', 'shm', 'udp', etc.

Rename net-osu to MPI_net to match tcp
Remove multinode-net-performance and add to multinode-tcp-performance. Rename
this to multinode-performance.

Signed-off-by: Zach Dworkin <zachary.dworkin@intel.com>

--- a/contrib/intel/jenkins/Jenkinsfile
+++ b/contrib/intel/jenkins/Jenkinsfile
@@ -416,7 +416,7 @@ pipeline {
             }
           }
         }
-        stage('multinode-tcp-performance') {
+        stage('multinode-performance') {
           agent { node { label 'cvl' } }
           options { skipDefaultCheckout() }
           steps {
@@ -427,6 +427,9 @@ pipeline {
                   (
                       cd ${env.WORKSPACE}/${SCRIPT_LOCATION}/
                       python3.7 runtests.py --prov=tcp --test=multinode
+                      echo "multinode tcp performance completed."
+                      python3.7 runtests.py --prov=net --test=multinode
+                      echo "multinode net performance completed."
                       echo "multinode performance completed."
                   )
                 """
@@ -554,7 +557,7 @@ pipeline {
             }
           }
         }
-        stage('net-fabtests') {
+        stage('net') {
           agent { node { label 'cvl' } }
           options { skipDefaultCheckout() }
           steps {
@@ -621,7 +624,7 @@ pipeline {
             }
           }
         }
-        stage('net-osu') {
+        stage('MPI_net-osu') {
           agent { node { label 'cvl' } }
           options { skipDefaultCheckout() }
           steps {
@@ -635,23 +638,6 @@ pipeline {
                 )
               """
             }
-          }
-        }
-        stage('multinode-net-performance') {
-          agent { node { label 'cvl' } }
-          options { skipDefaultCheckout() }
-          steps {
-              withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH'])
-              {
-                sh """
-                  env
-                  (
-                      cd ${env.WORKSPACE}/${SCRIPT_LOCATION}/
-                      python3.7 runtests.py --prov=net --test=multinode
-                      echo "multinode performance completed."
-                  )
-                """
-              }
           }
         }
       }
