contrib/intel/jenkins: Add summarizer for multinode tests
Signed-off-by: Zach Dworkin <zachary.dworkin@intel.com>

--- a/contrib/intel/jenkins/Jenkinsfile
+++ b/contrib/intel/jenkins/Jenkinsfile
@@ -416,7 +416,7 @@ pipeline {
             }
           }
         }
-        stage('multinode-performance') {
+        stage('multinode_performance') {
           agent { node { label 'cvl' } }
           options { skipDefaultCheckout() }
           steps {
