prov/rxm: Rework collective support to use collective provider(s)
Previously the collective support in rxm was based on the utility collective
implementation (under /prov/util/src) which lacked a clear boundary between
rxm and the utility code.

With the introduction of peer-provider based collective provider(s), there is
now well-defined interface between rxm and collective provider(s). This makes
it easier to enable collective support in other main providers as well as make
use of offload collective offload providers when they become available.

The patch implements rxm collective support using the newly added utility
collective provider. This maintains the same functionality of the old collective
implementation. In addition, necessary code and stubs are added for future
support of combined use of (SW based) utility collective provider and (HW
accelerated) offload collective provider(s).

Signed-off-by: Jianxin Xiong <jianxin.xiong@intel.com>

--- a/libfabric.vcxproj
+++ b/libfabric.vcxproj
@@ -448,6 +448,7 @@
     <ClCompile Include="prov\util\src\rxm_av.c" />
     <ClCompile Include="prov\rxm\src\rxm_domain.c" />
     <ClCompile Include="prov\rxm\src\rxm_ep.c" />
+    <ClCompile Include="prov\rxm\src\rxm_eq.c" />
     <ClCompile Include="prov\rxm\src\rxm_fabric.c" />
     <ClCompile Include="prov\rxm\src\rxm_atomic.c" />
     <ClCompile Include="prov\rxm\src\rxm_init.c">
