--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -37,7 +37,8 @@ _cxi_files = \
 	prov/cxi/src/cxip_req_buf.c \
 	prov/cxi/src/cxip_rdzv_pte.c \
 	prov/cxi/src/cxip_telemetry.c \
-	prov/cxi/src/cxip_ptelist_buf.c
+	prov/cxi/src/cxip_ptelist_buf.c \
+	prov/cxi/src/cxip_evtq.c
 
 _cxi_headers = \
 	prov/cxi/include/cxip.h \
