prov/peer: Introducing peer "provider" with peer_cq to begin with
include/ofi_peer.h file along with prov/peer directory defines space
where peer-related common code is placed.
peer_cq is the first structure that has been defined. It is based on
coll_cq structure. coll provider uses peer_cq instead of removed coll_cq.

See man/fi_peer.3.md

Signed-off-by: Tomasz Gromadzki <tomasz.gromadzki@intel.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -85,11 +85,12 @@ common_srcs =				\
 	prov/util/src/rocr_mem_monitor.c \
 	prov/util/src/ze_mem_monitor.c \
 	prov/util/src/cuda_ipc_monitor.c \
+	prov/peer/src/peer_cq.c 	\
+	prov/peer/src/peer.h		\
 	prov/coll/src/coll_attr.c	\
 	prov/coll/src/coll_av.c		\
 	prov/coll/src/coll_av_set.c	\
 	prov/coll/src/coll_coll.c	\
-	prov/coll/src/coll_cq.c		\
 	prov/coll/src/coll_domain.c	\
 	prov/coll/src/coll_ep.c		\
 	prov/coll/src/coll_eq.c		\
@@ -189,6 +190,7 @@ src_libfabric_la_SOURCES =			\
 	include/ofi_net.h			\
 	include/ofi_perf.h			\
 	include/ofi_coll.h			\
+	include/ofi_peer.h			\
 	include/fasthash.h			\
 	include/rbtree.h			\
 	include/uthash.h			\
