prov/cxi: Additional auth_key tests
New domain and endpoint level auth_key tests added.

NETCASSINI-4317

Signed-off-by: Ian Ziemba <ian.ziemba@hpe.com>

--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -135,7 +135,8 @@ nodist_prov_cxi_test_cxitest_SOURCES = \
 	prov/cxi/test/coll.c \
 	prov/cxi/test/ctrl.c \
 	prov/cxi/test/lat.c \
-	prov/cxi/test/repsum.c
+	prov/cxi/test/repsum.c \
+	prov/cxi/test/auth_key.c
 
 prov_cxi_test_cxitest_CPPFLAGS = $(AM_CPPFLAGS) $(cxi_CPPFLAGS) \
 	$(cxitest_CPPFLAGS) $(PTHREAD_CFLAGS)
