fabtests/component: Support FI_CONTEXT mode in fi-rdmabw-xe test
This allows the test to work with more providers (e.g. psm3).

Also change the FI_HMEM caps setting from always on to only set when
device memory is used.

Signed-off-by: Jianxin Xiong <jianxin.xiong@intel.com>
(cherry picked from commit bc56cb3a653e35ca959bbf47cdd3417bce9b9307)

--- a/fabtests/Makefile.am
+++ b/fabtests/Makefile.am
@@ -516,6 +516,7 @@ endif HAVE_VERBS_DEVEL
 
 component_dmabuf_rdma_fi_rdmabw_xe_SOURCES = \
 	component/dmabuf-rdma/fi-rdmabw-xe.c \
+	component/dmabuf-rdma/ofi_ctx_pool.h \
 	component/dmabuf-rdma/util.c \
 	component/dmabuf-rdma/util.h \
 	component/dmabuf-rdma/xe.c \
