--- a/prov/opx/Makefile.include
+++ b/prov/opx/Makefile.include
@@ -41,8 +41,8 @@ opx_files =									\
 		prov/opx/src/fi_opx_cq_ops_table_locking_8192.c			\
 		prov/opx/src/fi_opx_cq_ops_table_locking_runtime.c		\
 		prov/opx/src/fi_opx_cq_ops_table_non_locking.c			\
-                prov/opx/src/fi_opx_cq_ops_table_non_locking_8192.c             \
-                prov/opx/src/fi_opx_cq_ops_table_non_locking_runtime.c          \
+		prov/opx/src/fi_opx_cq_ops_table_non_locking_8192.c		\
+		prov/opx/src/fi_opx_cq_ops_table_non_locking_runtime.c		\
 		prov/opx/src/fi_opx_domain.c					\
 		prov/opx/src/fi_opx_ep.c					\
 		prov/opx/src/fi_opx_eq.c					\
@@ -137,6 +137,7 @@ noinst_HEADERS = \
 	$(top_srcdir)/prov/opx/include/rdma/fi_direct_domain.h \
 	$(top_srcdir)/prov/opx/include/opa_user.h \
 	$(top_srcdir)/prov/opx/include/fi_opx_hfi_select.h \
+	$(top_srcdir)/prov/opx/include/fi_opx_tid.h \
 	$(top_srcdir)/prov/opx/include/opa_user_gen1.h \
 	$(top_srcdir)/prov/opx/include/opa_intf.h \
 	$(top_srcdir)/prov/opx/include/hfi1_deprecated_gen1.h \
