Introduce kdreg2 as a memory monitor.
Provide configure option for setting default memory monitor.

Signed-off-by: Mike Uttormark <mike.uttormark@hpe.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -77,8 +77,9 @@ common_srcs =				\
 	prov/util/src/util_mr_cache.c	\
 	prov/util/src/cuda_mem_monitor.c \
 	prov/util/src/rocr_mem_monitor.c \
-	prov/util/src/ze_mem_monitor.c \
-	prov/util/src/util_coll.c
+	prov/util/src/ze_mem_monitor.c  \
+	prov/util/src/util_coll.c       \
+	prov/util/src/kdreg2_mem_monitor.c
 
 
 if MACOS
