--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0
 #
-# Copyright 2018,2020-2022 Cray Inc. All rights reserved.
+# Copyright 2018,2020-2023 Cray Inc. All rights reserved.
 
 if HAVE_CXI
 
@@ -50,74 +50,41 @@ rdmainclude_HEADERS += \
 _cxi_libs = \
 	-lcurl -ljson-c -lm
 
-if HAVE_PMI
-
 # Stand-alone srun tests for hardware testing environment
-bin_PROGRAMS += prov/cxi/test/distributed/pmi_launch
-prov_cxi_test_distributed_pmi_launch_SOURCES = \
-	prov/cxi/test/distributed/pmi_utils.h \
-	prov/cxi/test/distributed/pmi_utils.c \
-	prov/cxi/test/distributed/pmi_launch.c
-prov_cxi_test_distributed_pmi_launch_CPPFLAGS = -DUSE_PMI2
-prov_cxi_test_distributed_pmi_launch_LDFLAGS = -static -lpmi2
+noinst_PROGRAMS = prov/cxi/test/multinode/test_frmwk
+prov_cxi_test_multinode_test_frmwk_SOURCES = \
+	prov/cxi/test/multinode/multinode_frmwk.h \
+	prov/cxi/test/multinode/multinode_frmwk.c \
+	prov/cxi/test/multinode/test_frmwk.c
+prov_cxi_test_multinode_test_frmwk_CPPFLAGS = \
+	$(AM_CPPFLAGS) $(cxi_CPPFLAGS) $(PTHREAD_FLAGS)
+prov_cxi_test_multinode_test_frmwk_LDFLAGS = -static
+prov_cxi_test_multinode_test_frmwk_LDADD = $(linkback) $(PTHREAD_LIBS)
 
-bin_PROGRAMS += prov/cxi/test/distributed/pmi_launch_test
-prov_cxi_test_distributed_pmi_launch_test_SOURCES = \
-	prov/cxi/test/distributed/pmi_launch_test.c
+noinst_PROGRAMS += prov/cxi/test/multinode/test_zbcoll
+prov_cxi_test_multinode_test_zbcoll_SOURCES = \
+	prov/cxi/test/multinode/multinode_frmwk.h \
+	prov/cxi/test/multinode/multinode_frmwk.c \
+	prov/cxi/test/multinode/test_zbcoll.c
+prov_cxi_test_multinode_test_zbcoll_CPPFLAGS = \
+	$(AM_CPPFLAGS) $(cxi_CPPFLAGS) $(PTHREAD_FLAGS)
+prov_cxi_test_multinode_test_zbcoll_LDFLAGS = -static
+prov_cxi_test_multinode_test_zbcoll_LDADD = $(linkback) $(PTHREAD_LIBS)
 
-bin_PROGRAMS += prov/cxi/test/distributed/test_pmi
-prov_cxi_test_distributed_test_pmi_SOURCES = \
-	prov/cxi/test/distributed/pmi_utils.h \
-	prov/cxi/test/distributed/pmi_utils.c \
-	prov/cxi/test/distributed/test_pmi.c
-prov_cxi_test_distributed_test_pmi_CPPFLAGS = -DUSE_PMI2
-prov_cxi_test_distributed_test_pmi_LDFLAGS = -static -lpmi2
-
-bin_PROGRAMS += prov/cxi/test/distributed/test_frmwk
-prov_cxi_test_distributed_test_frmwk_SOURCES = \
-	prov/cxi/test/distributed/pmi_utils.h \
-	prov/cxi/test/distributed/pmi_utils.c \
-	prov/cxi/test/distributed/pmi_frmwk.h \
-	prov/cxi/test/distributed/pmi_frmwk.c \
-	prov/cxi/test/distributed/test_frmwk.c
-prov_cxi_test_distributed_test_frmwk_CPPFLAGS = \
-	$(AM_CPPFLAGS) $(cxi_CPPFLAGS) $(PTHREAD_FLAGS) \
-	-DUSE_PMI2
-prov_cxi_test_distributed_test_frmwk_LDFLAGS = -static -lpmi2
-prov_cxi_test_distributed_test_frmwk_LDADD = $(linkback) $(PTHREAD_LIBS)
-
-bin_PROGRAMS += prov/cxi/test/distributed/test_zbcoll
-prov_cxi_test_distributed_test_zbcoll_SOURCES = \
-	prov/cxi/test/distributed/pmi_utils.h \
-	prov/cxi/test/distributed/pmi_utils.c \
-	prov/cxi/test/distributed/pmi_frmwk.h \
-	prov/cxi/test/distributed/pmi_frmwk.c \
-	prov/cxi/test/distributed/test_zbcoll.c
-prov_cxi_test_distributed_test_zbcoll_CPPFLAGS = \
-	$(AM_CPPFLAGS) $(cxi_CPPFLAGS) $(PTHREAD_FLAGS) \
-	-DUSE_PMI2
-prov_cxi_test_distributed_test_zbcoll_LDFLAGS = -static -lpmi2
-prov_cxi_test_distributed_test_zbcoll_LDADD = $(linkback) $(PTHREAD_LIBS)
-
-bin_PROGRAMS += prov/cxi/test/distributed/test_coll
-prov_cxi_test_distributed_test_coll_SOURCES = \
-	prov/cxi/test/distributed/pmi_utils.h \
-	prov/cxi/test/distributed/pmi_utils.c \
-	prov/cxi/test/distributed/pmi_frmwk.h \
-	prov/cxi/test/distributed/pmi_frmwk.c \
-	prov/cxi/test/distributed/test_coll.c
-prov_cxi_test_distributed_test_coll_CPPFLAGS = \
-	$(AM_CPPFLAGS) $(cxi_CPPFLAGS) $(PTHREAD_FLAGS) \
-	-DUSE_PMI2
-prov_cxi_test_distributed_test_coll_LDFLAGS = -static -lpmi2
-prov_cxi_test_distributed_test_coll_LDADD = $(linkback) $(PTHREAD_LIBS)
-
-endif HAVE_PMI
+noinst_PROGRAMS += prov/cxi/test/multinode/test_coll
+prov_cxi_test_multinode_test_coll_SOURCES = \
+	prov/cxi/test/multinode/multinode_frmwk.h \
+	prov/cxi/test/multinode/multinode_frmwk.c \
+	prov/cxi/test/multinode/test_coll.c
+prov_cxi_test_multinode_test_coll_CPPFLAGS = \
+	$(AM_CPPFLAGS) $(cxi_CPPFLAGS) $(PTHREAD_FLAGS)
+prov_cxi_test_multinode_test_coll_LDFLAGS = -static
+prov_cxi_test_multinode_test_coll_LDADD = $(linkback) $(PTHREAD_LIBS)
 
 if HAVE_CRITERION
 
 # curltest is not expected to exist outside devel env
-bin_PROGRAMS += prov/cxi/test/curltest
+noinst_PROGRAMS += prov/cxi/test/curltest
 prov_cxi_test_curltest_SOURCES = \
 	prov/cxi/test/curl.c
 prov_cxi_test_curltest_CPPFLAGS = $(AM_CPPFLAGS) $(cxi_CPPFLAGS) \
