--- a/prov/opx/Makefile.include
+++ b/prov/opx/Makefile.include
@@ -44,6 +44,7 @@ opx_files =									\
 		prov/opx/src/fi_opx_cq_ops_table_non_locking_8192.c		\
 		prov/opx/src/fi_opx_cq_ops_table_non_locking_runtime.c		\
 		prov/opx/src/fi_opx_domain.c					\
+		prov/opx/src/fi_opx_tid_domain.c				\
 		prov/opx/src/fi_opx_ep.c					\
 		prov/opx/src/fi_opx_eq.c					\
 		prov/opx/src/fi_opx_fabric.c					\
@@ -60,6 +61,7 @@ opx_files =									\
 		prov/opx/src/fi_opx_sysfs.c					\
 		prov/opx/src/fi_opx_service.c					\
 		prov/opx/src/fi_opx_shm.c					\
+		prov/opx/src/fi_opx_tid_cache.c					\
 		prov/opx/src/fi_opx_hfi_select.c				\
 		prov/opx/src/opa_utils_gen1.c					\
 		prov/opx/src/opa_proto.c					\
@@ -131,6 +133,7 @@ noinst_HEADERS = \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_tagged.h \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_hfi1_progress.h \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_progress.h \
+	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_tid_domain.h \
 	$(top_srcdir)/prov/opx/include/rdma/fi_direct_trigger.h \
 	$(top_srcdir)/prov/opx/include/rdma/fi_direct_atomic.h \
 	$(top_srcdir)/prov/opx/include/rdma/fi_direct.h \
@@ -138,6 +141,7 @@ noinst_HEADERS = \
 	$(top_srcdir)/prov/opx/include/opa_user.h \
 	$(top_srcdir)/prov/opx/include/fi_opx_hfi_select.h \
 	$(top_srcdir)/prov/opx/include/fi_opx_tid.h \
+	$(top_srcdir)/prov/opx/include/fi_opx_tid_cache.h \
 	$(top_srcdir)/prov/opx/include/opa_user_gen1.h \
 	$(top_srcdir)/prov/opx/include/opa_intf.h \
 	$(top_srcdir)/prov/opx/include/hfi1_deprecated_gen1.h \
