man/guide: Add user-guide to man pages
Relocate and update the ofi-guide from the adjacent git repo to
integrate with the libfabric man pages.  This will make it easier
to keep it in sync with API updates and avoid duplicate text
between the guide and other man pages.

Update man pages to align with guide, expanding descriptions
as needed, with appropriate references between man pages.
Remove duplicate and outdated text.

Signed-off-by: Sean Hefty <sean.hefty@intel.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -278,9 +278,14 @@ real_man_pages = \
         man/man3/fi_trigger.3 \
         man/man3/fi_version.3 \
         man/man7/fabric.7 \
+        man/man7/fi_arch.7 \
+        man/man7/fi_direct.7 \
+        man/man7/fi_guide.7 \
 	man/man7/fi_hook.7 \
+        man/man7/fi_intro.7 \
         man/man7/fi_provider.7 \
-        man/man7/fi_direct.7
+        man/man7/fi_setup.7
+
 
 dummy_man_pages = \
         man/man3/fi_accept.3 \
