--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -48,6 +48,7 @@ _efa_files = \
 	prov/efa/src/efa_prov_info.c \
 	prov/efa/src/efa_fork_support.c \
 	prov/efa/src/efa_tp_def.c \
+	prov/efa/src/rxr/efa_rdm_peer.c \
 	prov/efa/src/rxr/rxr_prov.c	\
 	prov/efa/src/rxr/rxr_env.c	\
 	prov/efa/src/rxr/rxr_cq.c	\
@@ -81,6 +82,7 @@ _efa_headers = \
 	prov/efa/src/efa_cq.h \
 	prov/efa/src/efa_tp_def.h \
 	prov/efa/src/efa_tp.h \
+	prov/efa/src/rxr/efa_rdm_peer.h \
 	prov/efa/src/rxr/rxr.h \
 	prov/efa/src/rxr/rxr_env.h \
 	prov/efa/src/rxr/rxr_cntr.h \
