--- a/contrib/intel/jenkins/Jenkinsfile
+++ b/contrib/intel/jenkins/Jenkinsfile
@@ -156,7 +156,7 @@ pipeline {
                   else
                     rm -rf ${env.WORKSPACE}/py_scripts && mkdir ${env.WORKSPACE}/py_scripts
                   fi
-                  
+
                   git clone --branch ${TARGET} ${env.UPSTREAM} ${env.WORKSPACE}/py_scripts
 
                   echo "Copy log dirs."
@@ -416,12 +416,12 @@ pipeline {
                   cd ${env.WORKSPACE}/${SCRIPT_LOCATION}/
                   python3.7 runtests.py --prov=verbs --util=rxm --test=mpichtestsuite
                   echo "verbs-rxm MPICH testsuite completed."
+                  python3.7 runtests.py --prov=tcp --test=mpichtestsuite
+                  echo "tcp MPICH testsuite completed."
                   python3.7 runtests.py --prov=tcp --util=rxm --test=mpichtestsuite
                   echo "tcp-rxm MPICH testsuite completed."
                   python3.7 runtests.py --prov=sockets --test=mpichtestsuite
                   echo "sockets MPICH testsuite completed."
-                  python3.7 runtests.py --prov=net --test=mpichtestsuite
-                  echo "net MPICH testsuite completed."
                   echo "MPICH testsuite completed."
                 )
               """
@@ -439,8 +439,6 @@ pipeline {
                   cd ${env.WORKSPACE}/${SCRIPT_LOCATION}/
                   python3.7 runtests.py --prov=tcp --test=shmem
                   echo "SHMEM tcp completed."
-                  python3.7 runtests.py --prov=net --test=shmem
-                  echo "SHMEM net completed."
                   python3.7 runtests.py --prov=verbs --test=shmem
                   echo "SHMEM verbs completed."
                   python3.7 runtests.py --prov=sockets --test=shmem
@@ -463,8 +461,6 @@ pipeline {
                       cd ${env.WORKSPACE}/${SCRIPT_LOCATION}/
                       python3.7 runtests.py --prov=tcp --test=multinode
                       echo "multinode tcp performance completed."
-                      python3.7 runtests.py --prov=net --test=multinode
-                      echo "multinode net performance completed."
                       echo "multinode performance completed."
                   )
                 """
@@ -482,6 +478,8 @@ pipeline {
                   cd ${env.WORKSPACE}/${SCRIPT_LOCATION}/
                   python3.7 runtests.py --prov=tcp --util=rxm --test=oneccl
                   echo "oneCCL tcp-rxm completed."
+                  python3.7 runtests.py --prov=tcp --test=oneccl
+                  echo "oneCCL tcp completed."
                   python3.7 runtests.py --prov=psm3 --test=oneccl
                   echo "oneCCL psm3 completed."
                   echo "OneCCL completed."
@@ -567,89 +565,6 @@ pipeline {
                 cd ${env.WORKSPACE}/${SCRIPT_LOCATION}/
                 python3.9 runtests.py --prov=shm --test=fabtests --user_env="{'FI_SHM_DISABLE_CMA':1, 'FI_SHM_USE_DSA_SAR':1}"
               )
-              """
-            }
-          }
-        }
-        stage('net') {
-          agent { node { label 'cvl' } }
-          options { skipDefaultCheckout() }
-          steps {
-            withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH']) {
-              sh """
-                env
-                (
-                  cd ${env.WORKSPACE}/${SCRIPT_LOCATION}/
-                  python3.7 runtests.py --prov=net --test=fabtests
-                  python3.7 runtests.py --prov=net --test=fabtests --ofi_build_mode=dbg
-                  python3.7 runtests.py --prov=net --test=fabtests --ofi_build_mode=dl
-                  echo "net completed."
-                )
-              """
-            }
-          }
-        }
-        // separate imb tests into 3 stages rather than 1 to hopefully run in parallel
-        stage('MPI_net-1') {
-          agent { node { label 'cvl' } }
-          options { skipDefaultCheckout() }
-          steps {
-            withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH']) {
-              sh """
-                env
-                (
-                  cd ${env.WORKSPACE}/${SCRIPT_LOCATION}/
-                  python3.7 runtests.py --prov=net --test=IMB --imb_grp=1
-                  echo "MPI_net Group 1 completed."
-                )
-              """
-            }
-          }
-        }
-        stage('MPI_net-2') {
-          agent { node { label 'cvl' } }
-          options { skipDefaultCheckout() }
-          steps {
-            withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH']) {
-              sh """
-                env
-                (
-                  cd ${env.WORKSPACE}/${SCRIPT_LOCATION}/
-                  python3.7 runtests.py --prov=net --test=IMB --imb_grp=2
-                  echo "MPI_net Group 2 completed."
-                )
-              """
-            }
-          }
-        }
-        stage('MPI_net-3') {
-          agent { node { label 'cvl' } }
-          options { skipDefaultCheckout() }
-          steps {
-            withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH']) {
-              sh """
-                env
-                (
-                  cd ${env.WORKSPACE}/${SCRIPT_LOCATION}/
-                  python3.7 runtests.py --prov=net --test=IMB --imb_grp=3
-                  echo "MPI_net Group 3 completed."
-                )
-              """
-            }
-          }
-        }
-        stage('MPI_net-osu') {
-          agent { node { label 'cvl' } }
-          options { skipDefaultCheckout() }
-          steps {
-            withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH']) {
-              sh """
-                env
-                (
-                  cd ${env.WORKSPACE}/${SCRIPT_LOCATION}/
-                  python3.7 runtests.py --prov=net --test=osu
-                  echo "MPI-net-osu completed."
-                )
               """
             }
           }
