Add the ucx provider
This is based on the old mlx provider that was dropped in libfabric 1.9.
New functionalities have been added including but not limited to raw key,
RMA, and untagged message queue support.

Signed-off-by: Jianxin Xiong <jianxin.xiong@intel.com>

--- a/configure.ac
+++ b/configure.ac
@@ -920,6 +920,7 @@ FI_PROVIDER_SETUP([rxd])
 FI_PROVIDER_SETUP([bgq])
 FI_PROVIDER_SETUP([shm])
 FI_PROVIDER_SETUP([rstream])
+FI_PROVIDER_SETUP([ucx])
 FI_PROVIDER_SETUP([perf])
 FI_PROVIDER_SETUP([trace])
 FI_PROVIDER_SETUP([hook_debug])
