prov/cxi: Extend collective NETSIM tests.
NETCASSINI-4207

Add fi_barrier() function for export.
Add mynode_fiaddr for performance.
Add barrier test.
Add broadcast test.
Add reduce test.
Change _allreduceop() test function syntax to match fi_allreduce().

Signed-off-by: Joe Nemeth <joseph.nemeth@hpe.com>

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,8 @@ pingpong/fi_*
 
 fabtests/pytest/__pycache__
 fabtests/pytest/*/__pycache__
+
+prov/cxi/test/multinode/test_coll
+prov/cxi/test/multinode/test_frmwk
+prov/cxi/test/multinode/test_zbcoll
+
