prov/efa: move struct rxr_ep and related fucntion declarations to rxr_ep.h
Use a separate header file rxr_ep.h to store struct rxr_ep
and its related functions.

Signed-off-by: Wei Zhang <wzam@amazon.com>

--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -90,6 +90,7 @@ _efa_headers = \
 	prov/efa/src/rdm/efa_rdm_peer.h	\
 	prov/efa/src/rdm/efa_rdm_cq.h \
 	prov/efa/src/rdm/rxr.h \
+	prov/efa/src/rdm/rxr_ep.h \
 	prov/efa/src/rdm/rxr_env.h \
 	prov/efa/src/rdm/rxr_cntr.h \
 	prov/efa/src/rdm/rxr_rma.h \
