prov/efa: merge rxr_prov,rxr_util_prov with efa_prov,efa_util_prov
merge rxr_prov into efa_prov, and
merge rxr_util_prov into efa_util_prov

Signed-off-by: Wei Zhang <wzam@amazon.com>

--- a/libfabric.vcxproj
+++ b/libfabric.vcxproj
@@ -887,6 +887,7 @@
     <ClCompile Include="prov\efa\src\efa_prov_info.c" />
     <ClCompile Include="prov\efa\src\efa_fork_support.c" />
     <ClCompile Include="prov\efa\src\efa_base_ep.c" />
+    <ClCompile Include="prov\efa\src\efa_prov.c" />
     <ClCompile Include="prov\efa\src\dgram\efa_dgram_ep.c" />
     <ClCompile Include="prov\efa\src\dgram\efa_dgram_cq.c" />
     <ClCompile Include="prov\efa\src\dgram\efa_dgram_msg.c" />
@@ -906,7 +907,6 @@
     <ClCompile Include="prov\efa\src\rdm\rxr_pkt_type_req.c" />
     <ClCompile Include="prov\efa\src\rdm\rxr_read.c" />
     <ClCompile Include="prov\efa\src\rdm\rxr_rma.c" />
-    <ClCompile Include="prov\efa\src\rdm\rxr_prov.c" />
     <ClCompile Include="prov\efa\src\rdm\efa_rdm_cq.c" />
     <ClCompile Include="prov\efa\src\rdm\efa_rdm_peer.c" />
   </ItemGroup>
