--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -44,13 +44,13 @@ _efa_files = \
 	prov/efa/src/efa_fork_support.c \
 	prov/efa/src/efa_tp_def.c \
 	prov/efa/src/efa_base_ep.c \
+	prov/efa/src/efa_prov.c	\
 	prov/efa/src/dgram/efa_dgram_ep.c \
 	prov/efa/src/dgram/efa_dgram_cq.c \
 	prov/efa/src/dgram/efa_dgram_msg.c \
 	prov/efa/src/dgram/efa_dgram_rma.c \
 	prov/efa/src/rdm/efa_rdm_peer.c	\
 	prov/efa/src/rdm/efa_rdm_cq.c \
-	prov/efa/src/rdm/rxr_prov.c	\
 	prov/efa/src/rdm/rxr_env.c	\
 	prov/efa/src/rdm/rxr_ep.c	\
 	prov/efa/src/rdm/rxr_cntr.c	\
@@ -84,6 +84,7 @@ _efa_headers = \
 	prov/efa/src/efa_base_ep.h \
 	prov/efa/src/efa_tp_def.h \
 	prov/efa/src/efa_tp.h \
+	prov/efa/src/efa_prov.h \
 	prov/efa/src/dgram/efa_dgram_ep.h \
 	prov/efa/src/dgram/efa_dgram_cq.h \
 	prov/efa/src/rdm/efa_rdm_peer.h	\
